--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -73,3 +73,24 @@ canvas {
     display: flex;
   }
 }
+
+.intro {
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #F98D8D;
+  color: white;
+  width: 100%;
+  height: 100%;
+}
+
+#startButton {
+  margin-top: 20px;
+  padding: 10px 20px;
+  font-size: 20px;
+  cursor: pointer;
+  background-color: #FFE9E9;
+  border: none;
+}
