--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -96,6 +96,7 @@ canvas {
   color: white;
   width: 100%;
   height: 100%;
+  z-index: 1000;
 }
 
 .start {
@@ -106,4 +107,43 @@ canvas {
   background-color: #FFE9E9;
   border: none;
   text-decoration: none;
+}
+
+.outro {
+  display: none;
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #87CEFA;
+  color: white;
+  width: 100%;
+  height: 100%;
+  z-index: 1001;
+  padding-top: 2em;
+}
+
+.social {
+  font-size: 20px;
+}
+
+a {
+  color: white;
+}
+
+.stats_deaths {
+  margin-bottom: 15px;
+}
+
+.stats_deaths, .stats_time {
+  font-size: 20px;
+}
+
+.social {
+  font-size: 20px;
+}
+
+.active {
+  display: block;
 }
